<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Scorekeeper">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/team1"
            style="@style/TeamText"/>
        <ImageButton
            android:id="@+id/decreaseTeam1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_background"
            android:onClick="decreaseScore"
            android:src="@drawable/ic_baseline_remove_24"
            style="@style/MinusButtons"
            android:contentDescription="@string/remove_button_description"
            />
        <TextView
            android:id="@+id/score_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/initail_count"
            style="@style/ScoreText"/>
        <ImageButton
            android:id="@+id/increaseTeam1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_outline_add_24"
            android:background="@drawable/button_background"
            android:onClick="increaseScore"
            style="@style/PlusButtons"
            android:contentDescription="@string/plus_button_description"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/team2"
            style="@style/TeamText"/>
        <ImageButton
            android:id="@+id/decreaseTeam2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="decreaseScore"
            android:background="@drawable/button_background"
            android:src="@drawable/ic_baseline_remove_24"
            android:contentDescription="@string/remove_button_description"
            style="@style/MinusButtons"
            />
        <TextView
            android:id="@+id/score_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/initail_count"
            style="@style/ScoreText"/>
        <ImageButton
            android:id="@+id/increaseTeam2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:onClick="increaseScore"
            android:background="@drawable/button_background"
            android:src="@drawable/ic_outline_add_24"
            style="@style/PlusButtons"
            android:contentDescription="@string/plus_button_description"
            />
    </RelativeLayout>
</LinearLayout>